refactor name classes